[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sprites/buildings/building_base.png" type="Texture" id=1]
[ext_resource path="res://Sprites/buildings/bomb/building_bomb_attach3.png" type="Texture" id=2]
[ext_resource path="res://Sprites/buildings/bomb/building_bomb_attach4.png" type="Texture" id=3]
[ext_resource path="res://scripts/buildings/BombBuilding.gd" type="Script" id=4]
[ext_resource path="res://Sprites/buildings/bomb/building_bomb_attach1.png" type="Texture" id=5]
[ext_resource path="res://Sprites/buildings/bomb/building_bomb_attach2.png" type="Texture" id=6]
[ext_resource path="res://Sprites/buildings/bomb/building_bomb_attach5.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 7 ), ExtResource( 6 ) ],
"loop": false,
"name": "Fire",
"speed": 12.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 2 ) ],
"loop": false,
"name": "Anticipate",
"speed": 12.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[sub_resource type="CircleShape2D" id=3]
radius = 151.003

[node name="BombTower" type="StaticBody2D"]
collision_layer = 8
collision_mask = 0
script = ExtResource( 4 )

[node name="Base" type="Sprite" parent="."]
position = Vector2( 0, -4 )
texture = ExtResource( 1 )

[node name="Attach" type="AnimatedSprite" parent="Base"]
position = Vector2( 0, -6 )
frames = SubResource( 1 )
animation = "Idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )
[connection signal="animation_finished" from="Base/Attach" to="." method="_on_Attach_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
